Use coverage script directly. The plugin does something weird which causes modules imported by fixtures to not be reported correctly.

--- a/tox.ini
+++ b/tox.ini
@@ -3,16 +3,18 @@ envlist = py26,py27
 
 [testenv]
 deps =
+    coverage
     mock
     pytest
     pytest-capturelog
-    pytest-cov
     pytest-pep8
     pytest-flakes
     snot
 commands =
-    py.test --cov {envsitepackagesdir}/mr/awsome_virtualbox {posargs} {envsitepackagesdir}/mr/awsome_virtualbox
+    coverage run {envbindir}/py.test {posargs} {envsitepackagesdir}/mr/awsome_virtualbox
+    coverage report --include {envsitepackagesdir}/mr/awsome_virtualbox/*
+    coverage html --include {envsitepackagesdir}/mr/awsome_virtualbox/*
 
 [pytest]
-addopts = --pep8 --flakes --cov-report=term --cov-report=html --tb=native
+addopts = --pep8 --flakes --tb=native
 pep8ignore = E501
