Rename all the things!

--- a/tox.ini
+++ b/tox.ini
@@ -11,9 +11,9 @@ deps =
     pytest-flakes
     snot
 commands =
-    coverage run {envbindir}/py.test {posargs} {envsitepackagesdir}/mr/awsome_virtualbox
-    coverage report --include {envsitepackagesdir}/mr/awsome_virtualbox/*
-    coverage html --include {envsitepackagesdir}/mr/awsome_virtualbox/*
+    coverage run {envbindir}/py.test {posargs} {envsitepackagesdir}/ploy_virtualbox
+    coverage report --include {envsitepackagesdir}/ploy_virtualbox/*
+    coverage html --include {envsitepackagesdir}/ploy_virtualbox/*
 
 [pytest]
 addopts = --pep8 --flakes --tb=native
