Support for ploy 2.0.0.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py34
+envlist = py27,py34,py35,py36
 
 [testenv]
 deps =
@@ -8,10 +8,11 @@ deps =
     pytest
     pytest-pep8
     pytest-flakes
+changedir = {envdir}
 commands =
-    coverage run {envbindir}/py.test {posargs} {envsitepackagesdir}/ploy_virtualbox
+    coverage run {envbindir}/py.test {posargs} {envsitepackagesdir}/ploy_virtualbox/
     coverage report --include {envsitepackagesdir}/ploy_virtualbox/*
-    coverage html --include {envsitepackagesdir}/ploy_virtualbox/*
+    coverage html --include {envsitepackagesdir}/ploy_virtualbox/* -d {toxinidir}/htmlcov_{envname}
 
 [pytest]
 addopts = --pep8 --flakes --tb=native
