--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,6 @@ deps =
     coverage
     mock
     pytest
-    pytest-capturelog
     pytest-pep8
     pytest-flakes
 commands =
@@ -17,3 +16,4 @@ commands =
 [pytest]
 addopts = --pep8 --flakes --tb=native
 pep8ignore = E501
+log_level = NOTSET
