--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,8 @@ install:
   - pip install tox
 script:
   - tox -e $TOX_ENV
+notifications:
+  irc:
+    - "irc.freenode.org#bsdploy"
+  on_success: change
+  on_failure: change
