--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
 language: python
-python: 2.7
+sudo: false
+python:
+  - 2.7
+  - 3.4
+  - 3.5
+  - 3.6
 env:
   - TOX_ENV=py27
   - TOX_ENV=py34
   - TOX_ENV=py35
   - TOX_ENV=py36
 install:
-  - pip install tox
+  - pip install setuptools-git tox-travis
 script:
-  - tox -e $TOX_ENV
+  - tox
 notifications:
   irc:
     - "irc.freenode.org#bsdploy"
