--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
-sudo: false
 python:
-  - 2.7
-  - 3.4
-  - 3.5
-  - 3.6
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
 install:
-  - pip install setuptools-git tox-travis
+  - travis_retry pip install -U tox-travis
 script:
   - tox
 notifications:
