--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: python
-python: 2.7
-env:
-  - TOX_ENV=py27
-  - TOX_ENV=py34
+python:
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
 install:
-  - pip install tox
+  - travis_retry pip install -U tox-travis
 script:
-  - tox -e $TOX_ENV
+  - tox
 notifications:
   irc:
     - "irc.freenode.org#bsdploy"
