Switch to pytest-flake8.

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,7 @@ deps =
     coverage
     mock
     pytest
-    pytest-pep8
-    pytest-flakes
+    pytest-flake8
 changedir = {envdir}
 commands =
     coverage run {envbindir}/py.test {posargs} {envsitepackagesdir}/ploy_virtualbox/
@@ -15,6 +14,6 @@ commands =
     coverage html --include {envsitepackagesdir}/ploy_virtualbox/* -d {toxinidir}/htmlcov_{envname}
 
 [pytest]
-addopts = --pep8 --flakes --tb=native
-pep8ignore = E501
+addopts = --flake8 --tb=native
+flake8-ignore = E501
 log_level = NOTSET
