--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,11 @@ envlist = py27,py36,py37,py38,py39
 [testenv]
 deps =
     coverage
+    flake8<5
     mock
     pytest
-    pytest-flake8
+    pytest-flake8 < 1.1.0;python_version=="2.7"
+    pytest-flake8;python_version!="2.7"
 changedir = {envdir}
 commands =
     coverage run {envbindir}/py.test {posargs} {envsitepackagesdir}/ploy_virtualbox/
