Use pytest-cov.

--- a/tox.ini
+++ b/tox.ini
@@ -7,13 +7,12 @@ deps =
     flake8<5
     mock
     pytest
+    pytest-cov
     pytest-flake8 < 1.1.0;python_version=="2.7"
     pytest-flake8;python_version!="2.7"
 changedir = {envdir}
 commands =
-    coverage run {envbindir}/py.test {posargs} {envsitepackagesdir}/ploy_virtualbox/
-    coverage report --include {envsitepackagesdir}/ploy_virtualbox/*
-    coverage html --include {envsitepackagesdir}/ploy_virtualbox/* -d {toxinidir}/htmlcov_{envname}
+    {envbindir}/py.test --cov {envsitepackagesdir}/ploy_virtualbox/ --cov-report html:{toxinidir}/htmlcov_{envname} {posargs} {envsitepackagesdir}/ploy_virtualbox/
 
 [pytest]
 addopts = --flake8 --tb=native
